Search clothes handler (might need tweaking later, seems to give all results)
