# backend/internal/router/router.go
@@ -33,6 +33,7 @@ func SetupRouter() *gin.Engine {
 	protected.Use(middleware.AuthMiddleware())
 	{
 		protected.POST("/clothing/upload", handlers.UploadClothingHandler)
+		protected.POST("/clothing/search", handlers.SearchClothingHandler)
 		protected.GET("/user/userinfo", handlers.GetCurrentUserHandler)
 	}
 
